# asteroid-game

./: .gitignore  README.md  asteriod.py  asteroidfield.py  circleshape.py  constants.py  game.py  main.py  manager.py  menu.py  player.py  playground.py  pyproject.toml  requirements.txt  shot.py
src/asteroids/: asteroid.py  asteroidfield.py  circle.py  cli.py  config.py  entity.py  entityfactory.py  entitymanager.py  eventmanager.py  events.py  explosion.py  game.py  gamemanager.py  guimanager.py  inputmanager.py  interfaces.py  itemmanager.py  items.py  player.py  shot.py  stars.py  types.py  weapons.py
